--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-----------------navbar-start-------------------->
+  <!--======================= navbar-start =======================-->
     <header>
       <div class="container">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -39,9 +39,9 @@
         </nav>
       </div>
     </header>
-<!-----------------navbar-end-------------------->
+<!--======================= navbar-end =======================-->
 
-<!-----------------carousel-start-------------------->
+<!--======================= carousel-start =======================-->
 
     <section>
         <div class="container">
@@ -115,9 +115,9 @@
           </div>
         </div>
     </section>
-<!-----------------carousel-end-------------------->
+<!--======================= carousel-end =======================-->
 
-<!-----------------smartphone-start-------------------->
+<!--======================= smartphone-start=======================-->
 
     <section>
       <div class="container">
@@ -177,9 +177,9 @@
         </div>
       </div>
     </section>
-<!-----------------smartphone-end-------------------->
+<!--======================= smartphone-end =======================-->
 
-<!-----------------laptop-start-------------------->
+<!--======================= laptop-start =======================-->
 
     <section>
       <div class="container">
@@ -239,9 +239,9 @@
         </div>
       </div>
     </section>
-<!-----------------laptop-end-------------------->
+<!--======================= laptop-end =======================-->
 
-<!-----------------categories-start-------------------->
+<!--======================= categories-start =======================-->
 
     <section>
       <div class="container">
@@ -268,9 +268,9 @@
         </div>
       </div>
     </section>
-<!-----------------categories-end-------------------->
+<!--======================= categories-end =======================-->
 
-<!-----------------footer-start-------------------->
+<!--======================= footer-start =======================-->
 
     <section class="footer-area">
       <div class="container">
@@ -333,9 +333,9 @@
               <p>Email:</p>
               <a class="email-link" href="https://www.google.com/mdalimodassernayem@gmail.com">mdalimodassernayem@gmail.com</a>
               <div class="social-media">
-                <a href="#"><i class="fab fa-facebook"></i></a>
-                <a href="#"><i class="fab fa-youtube"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.facebook.com/mdalimodasser.nayem"><i class="fab fa-facebook"></i></a>
+                <a href="+8801816090766"><i class="fab fa-telegram"></i></a>
+                <a href=""><i class="fab fa-instagram"></i></a>
               </div>
             </div>
             
@@ -348,7 +348,7 @@
       </div>
     </section>
 
-<!-----------------footer-end-------------------->
+<!--=======================footer-end=======================-->
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
